# grit-vlm

./: CONFIG_GUIDE.md  PROJECT_OVERVIEW.md  README.md  TECHNICAL_IMPLEMENTATION.md  main.py  pyproject.toml  test_device_comparison.py  test_grit_config_system.py  test_grit_config_with_devices.py  test_grit_real_vlm.py  test_grit_simple.py  test_grit_tiny.py  test_smolvlm.py  test_smolvlm_fixed.py  train_smolvlm_vqa.py
examples/: advanced_usage.py  basic_usage.py  benchmark_comparison.py
grit_vlm/: __init__.py
grit_vlm/config/: __init__.py  device_config.py  model_configs.py
grit_vlm/core/: fisher_info.py  grit_lora.py
grit_vlm/evaluation/: __init__.py  benchmarks.py
grit_vlm/models/: vlm_adapter.py
grit_vlm/optimizers/: natural_gradient.py
grit_vlm/training/: __init__.py  trainer.py
grit_vlm/utils/: projection.py
